--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+    <progress id="js-progress" value="0"></progress>
+    <div class="progress-bar"></div>
     
     <!-- Header -->
 
@@ -25,24 +27,44 @@
         </nav>
         <hr>
 
-        <div class="pomoContents">
+        <!-- <div class="pomoContents">
             <div class="pomoContainer">
                 <div class="pomoButtons">
-                    <!-- Add mainEventListener JS function to change background color -->
                     <a href="#">Precrastinate</a>
                     <a href="#">Short Break</a>
                     <a href="#">Long Break</a>
                 </div>
 
                 <h1 id="timer">25:00</h1>
-                <!-- Add mainEventListener JS function to start timer count down-->
                 <div class="startBtn">
                     <a href="#">START</a>
                 </div>
 
             </div>
-        </div>
+        </div> -->
 
+        <div class="pomoContents">
+            <div class="pomoContainer">
+              <div class="pomoButtons" id="js-mode-buttons">
+                <!-- Add mainEventListener JS function to change background color -->
+                <a data-mode="pomodoro" href="#" class="active">Precrastinate </a>
+                <a data-mode="shortBreak" href="#">Short Break</a>
+                <a data-mode="longBreak" href="#">Long Break</a>
+              </div>
+    
+              <div class="clock" id="js-clock">
+                <h1>
+                  <span id="js-minutes">25</span>
+                  <span class="separator">:</span>
+                  <span id="js-seconds">00</span>
+                </h1>
+              </div>
+              <!-- Add mainEventListener JS function to start timer count down-->
+              <div class="startBtn">
+                <a id="startBtn" data-action="start" href="#">START</a>
+              </div>
+            </div>
+          </div>
 
         <form action="/todos/createTodo" method='POST'>
             <label for="todoItem" class="label">Tasks:   </label>
@@ -97,6 +119,6 @@
         <h3>Designed and Built by 100Devs Team</h3>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/timerManager.js"></script>
 </body>
 </html>
